# MetisAI_03

./: .gitignore  CLAUDE.md  MetisAI架构文档.md  MetisAI需求文档.md  OpenHands架构文档.md  README.md  init.ps1  init.sh  log_config.yaml  progress.txt  task.json  test_api.py  需求文档.md
backend/: README.md  database.py  example.py  init_db.py  main.py  pyproject.toml  test_db.py
backend/agents/: base.py  codeact.py  config_validation.py
backend/api/: agents.py  conversations.py  llm.py
backend/controllers/: agent_controller.py
backend/llm/: client.py  config.py  constants.py  test_llm.py
backend/models/: __init__.py  agent.py  base.py  conversation.py  message.py
backend/runtime/: action_executor.py  config.py  docker_runtime.py  test_sandbox.py
backend/services/: conversation_manager.py  db_service.py
backend/states/: agent_state.py
backend/tests/: test_agents.py  test_conversation_manager.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: agents.ts  axiosInstance.ts  conversations.ts  messages.ts
frontend/src/components/: Layout.css  Layout.tsx
frontend/src/hooks/: useAppSelector.ts
frontend/src/pages/: AgentsPage.css  AgentsPage.tsx  ConversationsPage.css  ConversationsPage.tsx  MessagesPage.css  MessagesPage.tsx
frontend/src/store/: index.ts
frontend/src/store/slices/: agentsSlice.ts  conversationsSlice.ts  messagesSlice.ts
